--- a/app.json
+++ b/app.json
@@ -4,10 +4,10 @@
 		"slug": "personal_wallet_app",
 		"version": "1.0.0",
 		"orientation": "portrait",
-		"icon": "./src/assets/icon.png",
+		"icon": "./assets/icon.png",
 		"userInterfaceStyle": "light",
 		"splash": {
-			"image": "./src/assets/splash.png",
+			"image": "./assets/splash.png",
 			"resizeMode": "contain",
 			"backgroundColor": "#ffffff"
 		},
@@ -20,12 +20,12 @@
 		},
 		"android": {
 			"adaptiveIcon": {
-				"foregroundImage": "./src/assets/adaptive-icon.png",
+				"foregroundImage": "./assets/adaptive-icon.png",
 				"backgroundColor": "#FFFFFF"
 			}
 		},
 		"web": {
-			"favicon": "./src/assets/favicon.png"
+			"favicon": "./assets/favicon.png"
 		}
 	}
 }
