--- a/package.json
+++ b/package.json
@@ -10,15 +10,25 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.10",
     "expo": "~45.0.0",
+    "expo-app-loading": "^2.0.0",
+    "expo-font": "^10.1.0",
     "expo-status-bar": "~1.3.0",
+    "prettier": "^2.6.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-safe-area-context": "^4.2.5",
+    "react-native-screens": "^3.13.1",
+    "react-native-svg": "^12.3.0",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "react-native-svg-transformer": "^1.0.0"
   },
   "private": true
 }
