--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-dropdown-select-list": "^1.0.10",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-paper": "^4.12.1",
     "react-native-paper-dropdown": "^1.0.7",
