--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~45.0.0",
     "expo-app-loading": "^2.0.0",
     "expo-font": "^10.1.0",
+    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "prettier": "^2.6.2",
     "react": "17.0.2",
