--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.1.2",
     "@react-native-masked-view/masked-view": "0.2.6",
     "@react-navigation/material-bottom-tabs": "^6.2.1",
